@@ -6,3 +6,13 @@ struct Y {
   ~Y() requires(true) = default;
   ~Y() requires(false) {}
 };
+
+Y<int> y;
+
+template<typename T>
+struct X {
+  ~X() requires(sizeof(T) == 8) = default;
+  ~X() requires(sizeof(T) != 8) {}
+};
+
+X<int> x;
